style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  background-color: #acacac;
  scroll-behavior: smooth;
}

body {
  width: 900px;
  margin: 0 auto;
  font-family: 'Poppins', sans-serif;
}

header {
  color: #fff;
  height: 130px;
  background-color: #8D4B55;
  padding: 20px;
}

nav {
  /* float: right; */
  transform: translate(17cm, -2.3cm);
  display: flex;
  gap: 8.5px;
}


.info {
  float: right;
  letter-spacing: 3px;
  word-spacing: 8px;
  margin-right: 20%;
}

h1 {
  font-size: 37px;
}

a {
  text-decoration: none;
  color: #000;
}

header p {
  font-size: 20px;
}

header::before {
  content: url('./media/fotor-ai-2023070612136.jpg');
  display: inline-block;
  zoom:15%;
  border-radius: 50%;
  overflow: hidden;
  width: 20%;
  height: 210%;
  border: 35px solid #8D4B55;
  transform: translateX(11cm);
  /* background-size: 100px; */
  /* visibility: visible; */
}

/* .left-side__container > img[alt='avatar-ico'] {
  width: 5cm;
  height: 6cm;
  border-radius: 50%;
  margin: -350% 0 0 0;
} */

.content-wrapper {
  padding: 40px 80px 80px;
  background-color: #FFFDFD;
  /* vertical-align: top; */
}

.left-side__container {
  width: 48%;
  display: inline-block;
  transform: translateY(20px);
}

.container {
  margin-top: 42px;
  line-height: 1.9;
}

h2 {
  color: #942637;
}

.underline {
  height: 2px;
  width: 130px;
  background-color: #8D4B55;
  margin: 8px 0 30px;
}

li {
  list-style-position: inside;
}

li {
  cursor: default;
}

.my-contact {
  font-size: 15px;
}

.my-contact li {
  color: #000;
}

.code {
  /* background-color: darkgray; */
  padding-right: 20px;
  line-height: 1.4;
}

.right-side__container {
  width: 50%;
  display: inline-block;
  transform: translateY(-180px);

}

main {
  line-height: 1.5;
}

.footer {
  padding: 20px 50px;
  background-color: #8D4B55;
  height: 80px;
  text-align: center;
  color: #fff;
}

.footer span {
  vertical-align: super;
  line-height: 40px; 
}

span a {
  color: #fff;
  text-shadow:#000 0px 1px 3px;
}

.footer span:last-of-type {
  margin-left: -60px;
}

.footer span:first-of-type {
  float: left;
}

img[alt='github-cat'] {
  background-color: #fff;
  border-radius: 50%;
  float: left;
  margin-right: 10px;
}

img[alt='rsschool'] {
  border-radius: 50%;
  float: right;
}

